--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Eventually</title>
   </head>
   <body>
-    <div id="root" class='bg-white dark:bg-gray-800'></div>
+    <div id="root" class='bg-white dark:bg-[var(--dark-theme)] '></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
